--- a/src/settings/pages/tab-validator/validator.component.html
+++ b/src/settings/pages/tab-validator/validator.component.html
@@ -1,4 +1,4 @@
-<app-admin-pages-tabs [key]="key" [extra]="extra">
+<settings-pages-tabs [key]="key" [extra]="extra">
   <ng-template #extra>
     <button form="form" nz-button nzType="primary" [disabled]="!form?.valid">更新验证</button>
   </ng-template>
@@ -20,4 +20,4 @@
       </nz-form-control>
     </nz-form-item>
   </form>
-</app-admin-pages-tabs>
+</settings-pages-tabs>
