--- a/src/settings/pages/tab-schema/schema.component.html
+++ b/src/settings/pages/tab-schema/schema.component.html
@@ -1,4 +1,4 @@
-<app-admin-pages-tabs [key]="key" [extra]="extra">
+<settings-pages-tabs [key]="key" [extra]="extra">
   <ng-template #extra>
     <button nz-button (click)="form()"> 创建字段 </button>
   </ng-template>
@@ -72,4 +72,4 @@
       </tr>
     </tbody>
   </nz-table>
-</app-admin-pages-tabs>
+</settings-pages-tabs>
