--- a/src/settings/pages/tab-schema/form/form.component.html
+++ b/src/settings/pages/tab-schema/form/form.component.html
@@ -178,7 +178,7 @@
                       <input style="width: 45%" type="text" nz-input formControlName="label" placeholder="元素名称" />
                     </ng-container>
                     <input style="width: 45%" type="text" nz-input formControlName="value" placeholder="元素值" />
-                    <button nz-button nzType="default" style="width: 10%" (click)="removeEnum(i)">
+                    <button nz-button nzType="default" style="width: 10%" (click)="removeValues(i)">
                       <i nz-icon nzType="minus-circle"></i>
                     </button>
                   </nz-input-group>
