--- a/src/settings/pages/pages.component.html
+++ b/src/settings/pages/pages.component.html
@@ -10,11 +10,11 @@
       <input type="text" nz-input placeholder="搜索" [(ngModel)]="name" />
     </nz-input-group>
     <nz-button-group *nzSpaceItem>
-      <button nz-button nz-tooltip="全部收起" (click)="expanded(tree.getTreeNodes(), false)">
-        <i nz-icon nzType="node-collapse"></i>
+      <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">
+        <i nz-icon nzType="reload"></i>
       </button>
-      <button nz-button nz-tooltip="全部展开" (click)="expanded(tree.getTreeNodes(), true)">
-        <i nz-icon nzType="node-expand"></i>
+      <button nz-button nzType="text" [nz-tooltip]="expand ? '全部收起' : '全部展开'" (click)="expanded()">
+        <i nz-icon [nzType]="expand ? 'node-collapse' : 'node-expand'"></i>
       </button>
     </nz-button-group>
   </nz-space>
