--- a/src/settings/roles/roles.component.html
+++ b/src/settings/roles/roles.component.html
@@ -4,4 +4,50 @@
   </button>
 </wpx-layout>
 
-<nz-card></nz-card>
+<ng-template #title>
+  <nz-space>
+    <nz-input-group *nzSpaceItem nzSuffixIcon="search">
+      <input type="text" nz-input placeholder="搜索" [(ngModel)]="name" />
+    </nz-input-group>
+    <nz-button-group *nzSpaceItem>
+      <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">
+        <i nz-icon nzType="reload"></i>
+      </button>
+      <button nz-button nzType="text" [nz-tooltip]="expand ? '全部收起' : '全部展开'" (click)="expanded()">
+        <i nz-icon [nzType]="expand ? 'node-collapse' : 'node-expand'"></i>
+      </button>
+    </nz-button-group>
+  </nz-space>
+</ng-template>
+
+<nz-row [nzGutter]="16">
+  <nz-col [nzXl]="5" [nzLg]="6">
+    <nz-card [nzTitle]="title">
+      <nz-tree
+        #tree
+        nzBlockNode
+        nzExpandAll
+        nzDraggable
+        [nzData]="nodes"
+        [nzSearchValue]="name"
+        [nzSelectedKeys]="selectedKeys"
+        (nzClick)="selected($event)"
+        (nzContextMenu)="actions($event, treeActions)"
+      >
+        <nz-dropdown-menu #treeActions="nzDropdownMenu">
+          <ul *ngIf="actionKey" nz-menu>
+            <ng-container *ngIf="data?.[actionKey] as page">
+              <li nz-menu-item [nzSelected]="false">{{ page.name }}</li>
+              <li nz-menu-divider></li>
+              <li nz-menu-item (click)="form(page)"> 编辑 </li>
+              <li nz-menu-item nzDanger (click)="delete(page)"> 删除 </li>
+            </ng-container>
+          </ul>
+        </nz-dropdown-menu>
+      </nz-tree>
+    </nz-card>
+  </nz-col>
+  <nz-col [nzXl]="19" [nzLg]="18">
+    <router-outlet></router-outlet>
+  </nz-col>
+</nz-row>
