--- a/src/settings/roles/form/form.component.html
+++ b/src/settings/roles/form/form.component.html
@@ -13,7 +13,7 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired>父节点</nz-form-label>
+    <nz-form-label>父节点</nz-form-label>
     <nz-form-control
       nzHasFeedback
       [nzAutoTips]="{
@@ -27,7 +27,7 @@
         [nzNodes]="parentNodes"
         nzShowSearch
         formControlName="parent"
-        nzPlaceHolder="请选择页面父节点"
+        nzPlaceHolder="默认最高级"
       ></nz-tree-select>
     </nz-form-control>
   </nz-form-item>
