--- a/projects/components/table/wpx-table.component.html
+++ b/projects/components/table/wpx-table.component.html
@@ -152,7 +152,7 @@
   [nzTitle]="coll.checkedNumber ? bulk : null"
   [nzLoading]="coll.loading"
   [nzSize]="coll.columnsHeight"
-  [nzData]="coll.value"
+  [nzData]="coll.values"
   [nzScroll]="scroll"
   [nzFrontPagination]="false"
   [nzShowSizeChanger]="true"
