--- a/projects/components/table/wpx-table.component.html
+++ b/projects/components/table/wpx-table.component.html
@@ -4,7 +4,7 @@
       <nz-input-group nzCompact>
         <input
           (keyup.enter)="submitSearch()"
-          [(ngModel)]="coll.searchText"
+          [(ngModel)]="ds.searchText"
           style="width: 420px"
           type="text"
           nz-input
@@ -45,7 +45,7 @@
         (wpxSubmit)="submitSearch($event)"
       >
         <nz-row [nzGutter]="16">
-          <ng-container *ngFor="let x of coll.columns">
+          <ng-container *ngFor="let x of ds.columns">
             <nz-col [nzSpan]="8">
               <nz-form-item [formGroupName]="x.value">
                 <nz-form-label>{{ x.label }}</nz-form-label>
@@ -96,7 +96,7 @@
         <label nz-checkbox [(ngModel)]="customWidth" (ngModelChange)="onResizeMessage()"> 自定义宽度 </label>
       </ng-template>
       <ng-template #columnsSizeContent>
-        <nz-radio-group [(ngModel)]="coll.columnsHeight" (ngModelChange)="coll.updateStorage()">
+        <nz-radio-group [(ngModel)]="ds.columnsHeight" (ngModelChange)="ds.updateStorage()">
           <label nz-radio-button nzValue="default">默认</label>
           <label nz-radio-button nzValue="middle">中等</label>
           <label nz-radio-button nzValue="small">紧凑</label>
@@ -119,23 +119,23 @@
           <nz-col>
             <label
               nz-checkbox
-              [(ngModel)]="coll.columnsChecked"
-              (ngModelChange)="coll.updateColumnsChecked()"
-              [nzIndeterminate]="coll.columnsIndeterminate"
+              [(ngModel)]="ds.columnsChecked"
+              (ngModelChange)="ds.updateColumnsChecked()"
+              [nzIndeterminate]="ds.columnsIndeterminate"
             >
               全部展示
             </label>
           </nz-col>
           <nz-col></nz-col>
           <nz-col>
-            <button nzSize="small" nz-button nzType="text" (click)="coll.columnsReset()">重置</button>
+            <button nzSize="small" nz-button nzType="text" (click)="ds.columnsReset()">重置</button>
           </nz-col>
         </nz-row>
       </ng-template>
       <ng-template #columnsContent>
-        <nz-checkbox-wrapper (nzOnChange)="coll.updateColumnChecked()">
+        <nz-checkbox-wrapper (nzOnChange)="ds.updateColumnChecked()">
           <nz-space nzDirection="vertical">
-            <ng-container *ngFor="let column of coll.columns">
+            <ng-container *ngFor="let column of ds.columns">
               <label *nzSpaceItem nz-checkbox [nzValue]="column.value" [(ngModel)]="column.checked">
                 {{ column.label }}
               </label>
@@ -149,16 +149,16 @@
 
 <nz-table
   #basicTable
-  [nzTitle]="coll.checkedNumber ? bulk : null"
-  [nzLoading]="coll.loading"
-  [nzSize]="coll.columnsHeight"
-  [nzData]="coll.values"
+  [nzTitle]="ds.checkedNumber ? bulk : null"
+  [nzLoading]="ds.loading"
+  [nzSize]="ds.columnsHeight"
+  [nzData]="ds.values"
   [nzScroll]="scroll"
   [nzFrontPagination]="false"
   [nzShowSizeChanger]="true"
-  [nzTotal]="coll.total"
-  [(nzPageSize)]="coll.pageSize"
-  [(nzPageIndex)]="coll.pageIndex"
+  [nzTotal]="ds.total"
+  [(nzPageSize)]="ds.pageSize"
+  [(nzPageIndex)]="ds.pageIndex"
   (nzPageIndexChange)="fetch.emit(false)"
   (nzPageSizeChange)="fetch.emit(true)"
 >
@@ -166,11 +166,11 @@
     <nz-alert nzType="info" nzBanner [nzMessage]="message"></nz-alert>
     <ng-template #message>
       <nz-row nzJustify="space-between">
-        <nz-col> 已选中 {{ coll.checkedNumber }} 项 </nz-col>
+        <nz-col> 已选中 {{ ds.checkedNumber }} 项 </nz-col>
         <nz-col></nz-col>
         <nz-col style="text-align: right">
           <a nz-button nzType="link" nzSize="small">操作<i nz-icon nzType="down"></i></a>
-          <a nz-button nzType="link" nzSize="small" (click)="coll.clearChecked()">取消选择</a>
+          <a nz-button nzType="link" nzSize="small" (click)="ds.clearChecked()">取消选择</a>
         </nz-col>
       </nz-row>
     </ng-template>
@@ -181,11 +181,11 @@
         nzWidth="65px"
         nzLeft
         nzAlign="center"
-        [nzChecked]="coll.checked"
-        [nzIndeterminate]="coll.indeterminate"
-        (nzCheckedChange)="coll.setNChecked($event)"
+        [nzChecked]="ds.checked"
+        [nzIndeterminate]="ds.indeterminate"
+        (nzCheckedChange)="ds.setNChecked($event)"
       ></th>
-      <ng-container *ngFor="let x of coll.displayColumns">
+      <ng-container *ngFor="let x of ds.displayColumns">
         <th
           nz-resizable
           nzBounds="window"
@@ -194,9 +194,9 @@
           [nzMaxWidth]="420"
           [nzMinWidth]="100"
           (nzResizeEnd)="resize($event, x.value)"
-          [nzWidth]="coll.columnsWidth[x.value] ?? '300px'"
+          [nzWidth]="ds.columnsWidth[x.value] ?? '300px'"
           [nzShowSort]="!customWidth"
-          [(nzSortOrder)]="coll.sortOptions[x.value]"
+          [(nzSortOrder)]="ds.sortOptions[x.value]"
           (nzSortOrderChange)="fetch.emit(true)"
         >
           {{ x.label }}
@@ -218,10 +218,10 @@
         nzLeft
         nzAlign="center"
         [nzDisabled]="data.disabled"
-        [nzChecked]="coll.checkedIds.has(data._id)"
-        (nzCheckedChange)="coll.setChecked(data._id, $event)"
+        [nzChecked]="ds.checkedIds.has(data._id)"
+        (nzCheckedChange)="ds.setChecked(data._id, $event)"
       ></td>
-      <ng-container *ngFor="let x of coll.displayColumns">
+      <ng-container *ngFor="let x of ds.displayColumns">
         <td>
           <p style="margin: 0" nz-typography nzEllipsis [nzEllipsisRows]="2">
             {{ data[x.value] }}
