--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -3,7 +3,7 @@
 
   <nz-layout class="content">
     <nz-sider nzTheme="light" [nzWidth]="240">
-      <wpx-nav></wpx-nav>
+      <!--      <wpx-nav></wpx-nav>-->
     </nz-sider>
     <nz-layout style="overflow: auto">
       <nz-content>
