--- a/src/settings/pages/form/form.component.html
+++ b/src/settings/pages/form/form.component.html
@@ -13,21 +13,14 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired>父节点</nz-form-label>
-    <nz-form-control
-      nzHasFeedback
-      [nzAutoTips]="{
-        default: {
-          required: '父节点不能为空'
-        }
-      }"
-    >
+    <nz-form-label>父节点</nz-form-label>
+    <nz-form-control nzHasFeedback>
       <nz-tree-select
         *ngIf="parentNodes"
         [nzNodes]="parentNodes"
         nzShowSearch
         formControlName="parent"
-        nzPlaceHolder="请选择页面父节点"
+        nzPlaceHolder="默认最高级"
       ></nz-tree-select>
     </nz-form-control>
   </nz-form-item>
