--- a/projects/common/src/layout/page-header/wpx-page-header.component.html
+++ b/projects/common/src/layout/page-header/wpx-page-header.component.html
@@ -22,7 +22,7 @@
       </ng-container>
       <ng-template #defaultTitle>
         <ng-container *ngIf="paths">
-          {{ (paths | wpxMap: (wpx.fragments | wpxJoin: '/')).name }}
+          <!--          {{ (paths | wpxMap: (wpx.fragments | wpxJoin: '/')).name }}-->
         </ng-container>
       </ng-template>
     </nz-page-header-title>
