--- a/projects/common/src/layout/nav/wpx-nav.component.html
+++ b/projects/common/src/layout/nav/wpx-nav.component.html
@@ -1,26 +1,24 @@
-<!--<ul nz-menu nzMode="inline">-->
-<!--  <ng-container *ngTemplateOutlet="navTemplate; context: { $implicit: wpx.pages | async }"></ng-container>-->
-<!--  <ng-template #navTemplate let-nodes>-->
-<!--    <ng-container *ngFor="let node of nodes | wpxSort: 'sort'">-->
-<!--      <ng-container *ngIf="node.nav">-->
-<!--        <ng-container *ngIf="!!node.router; else not">-->
-<!--          <li nz-menu-item nzMatchRouter [nzPaddingLeft]="node.level * 16" [routerLink]="node | AutoRouter">-->
-<!--            <i *ngIf="!!node.icon" nz-icon [nzType]="node.icon"></i>-->
-<!--            <span>{{ node.name }}</span>-->
-<!--          </li>-->
-<!--        </ng-container>-->
-<!--        <ng-template #not>-->
-<!--          <li nz-submenu [nzOpen]="node.fragments | OpenState: wpx.fragments" [nzPaddingLeft]="node.level * 16">-->
-<!--            <span title>-->
-<!--              <i *ngIf="!!node.icon" nz-icon [nzType]="node.icon"></i>-->
-<!--              <span>{{ node.name }}</span>-->
-<!--            </span>-->
-<!--            <ul>-->
-<!--              <ng-container *ngTemplateOutlet="navTemplate; context: { $implicit: node.children }"></ng-container>-->
-<!--            </ul>-->
-<!--          </li>-->
-<!--        </ng-template>-->
-<!--      </ng-container>-->
-<!--    </ng-container>-->
-<!--  </ng-template>-->
-<!--</ul>-->
+<ul nz-menu nzMode="inline">
+  <ng-container *ngTemplateOutlet="navTemplate; context: { $implicit: (wpx.navs | async)! }"></ng-container>
+  <ng-template #navTemplate let-pages>
+    <ng-container *ngFor="let page of pages | wpxSort: 'sort' | IsPageArray">
+      <ng-container *ngIf="page.kind !== 'group'; else isGroup">
+        <li nz-menu-item nzMatchRouter [routerLink]="['/pages', page._id]" [nzPaddingLeft]="page['path'].length * 24">
+          <i *ngIf="page.hasOwnProperty('icon')" nz-icon [nzType]="page.icon!"></i>
+          <span>{{ page.name }}</span>
+        </li>
+      </ng-container>
+      <ng-template #isGroup>
+        <li nz-submenu [nzOpen]="page._id | OpenState: wpx.pageId | async" [nzPaddingLeft]="page['path'].length * 24">
+          <span title>
+            <i *ngIf="page.hasOwnProperty('icon')" nz-icon [nzType]="page.icon!"></i>
+            <span>{{ page.name }}</span>
+          </span>
+          <ul>
+            <ng-container *ngTemplateOutlet="navTemplate; context: { $implicit: page['children'] }"></ng-container>
+          </ul>
+        </li>
+      </ng-template>
+    </ng-container>
+  </ng-template>
+</ul>
