--- a/projects/settings/settings.component.html
+++ b/projects/settings/settings.component.html
@@ -19,7 +19,7 @@
       </ul>
     </nz-sider>
     <nz-layout style="overflow: auto">
-      <wpx-page-header></wpx-page-header>
+      <wpx-page-header [wpxManual]="true"> </wpx-page-header>
       <nz-content>
         <router-outlet></router-outlet>
       </nz-content>
