--- a/projects/settings/users/users.component.html
+++ b/projects/settings/users/users.component.html
@@ -1,4 +1,4 @@
-<wpx-layout title="成员管理">
+<wpx-layout wpxTitle="成员管理">
   <button *wpxLayoutAction nz-button nzType="primary" nzShape="circle" nz-tooltip="新增">
     <i nz-icon nzType="plus"></i>
   </button>
