--- a/projects/common/layout/page-header/page-header.component.html
+++ b/projects/common/layout/page-header/page-header.component.html
@@ -1,39 +1,44 @@
-<!--<ng-container *ngIf="!wpx.layout.skipPageHeader">-->
-<!--  <ng-container *ngIf="!!wpx.layout.alert">-->
-<!--    <ng-container *ngTemplateOutlet="wpx.layout.alert"></ng-container>-->
-<!--  </ng-container>-->
-<!--  <nz-page-header [nzGhost]="false" [nzBackIcon]="wpx.layout.showBack ? '' : null">-->
-<!--    &lt;!&ndash;    <nz-breadcrumb *ngIf="paths" nz-page-header-breadcrumb>&ndash;&gt;-->
-<!--    &lt;!&ndash;      <ng-container *ngFor="let _ of wpx.fragments; index as i">&ndash;&gt;-->
-<!--    &lt;!&ndash;        <nz-breadcrumb-item>&ndash;&gt;-->
-<!--    &lt;!&ndash;          <ng-container *ngIf="paths | wpxMap: (wpx.fragments | slice: 0:i + 1 | wpxJoin: '/') as node">&ndash;&gt;-->
-<!--    &lt;!&ndash;            <ng-container *ngIf="!node.router; else text">&ndash;&gt;-->
-<!--    &lt;!&ndash;              <a [routerLink]="node | AutoRouter">{{ node.name }}</a>&ndash;&gt;-->
-<!--    &lt;!&ndash;            </ng-container>&ndash;&gt;-->
-<!--    &lt;!&ndash;            <ng-template #text>{{ node.name }}</ng-template>&ndash;&gt;-->
-<!--    &lt;!&ndash;          </ng-container>&ndash;&gt;-->
-<!--    &lt;!&ndash;        </nz-breadcrumb-item>&ndash;&gt;-->
-<!--    &lt;!&ndash;      </ng-container>&ndash;&gt;-->
-<!--    &lt;!&ndash;    </nz-breadcrumb>&ndash;&gt;-->
-<!--    <nz-breadcrumb nz-page-header-breadcrumb [nzAutoGenerate]="true"> </nz-breadcrumb>-->
-<!--    <nz-page-header-title>-->
-<!--      <ng-container *ngIf="!!wpx.layout.title; else defaultTitle">-->
-<!--        {{ wpx.layout.title }}-->
-<!--      </ng-container>-->
-<!--      <ng-template #defaultTitle>-->
-<!--        <ng-container *ngIf="paths">-->
-<!--          &lt;!&ndash;          {{ (paths | wpxMap: (wpx.fragments | wpxJoin: '/')).name }}&ndash;&gt;-->
-<!--        </ng-container>-->
-<!--      </ng-template>-->
-<!--    </nz-page-header-title>-->
-<!--    <nz-page-header-extra *ngIf="!!wpx.layout.actions">-->
-<!--      <nz-space>-->
-<!--        <ng-container *ngFor="let ref of wpx.layout.actions">-->
-<!--          <ng-container *nzSpaceItem>-->
-<!--            <ng-container *ngTemplateOutlet="ref"></ng-container>-->
-<!--          </ng-container>-->
-<!--        </ng-container>-->
-<!--      </nz-space>-->
-<!--    </nz-page-header-extra>-->
-<!--  </nz-page-header>-->
-<!--</ng-container>-->
+<ng-container *ngIf="!wpx.layout.skipPageHeader">
+  <ng-container *ngIf="!!wpx.layout.alert">
+    <ng-container *ngTemplateOutlet="wpx.layout.alert"></ng-container>
+  </ng-container>
+
+  <nz-page-header [nzGhost]="false" [nzBackIcon]="wpx.layout.showBack ? '' : null">
+    <nz-breadcrumb nz-page-header-breadcrumb [nzAutoGenerate]="wpxManual">
+      <ng-container *ngIf="!wpxManual">
+        <nz-breadcrumb-item>
+          <a [routerLink]="['/pages']">我的应用</a>
+        </nz-breadcrumb-item>
+        <ng-container *ngIf="(wpx.pages | async)! as pages">
+          <ng-container *ngIf="wpx.pageId">
+            <ng-container *ngFor="let id of pages[wpx.pageId]?.['path']">
+              <nz-breadcrumb-item>
+                <ng-container *ngIf="pages[id]?.kind !== 'group'; else textName">
+                  <a [routerLink]="['/pages', id]">{{ pages[id]?.name }}</a>
+                </ng-container>
+                <ng-template #textName>{{ pages[id]?.name }}</ng-template>
+              </nz-breadcrumb-item>
+            </ng-container>
+          </ng-container>
+        </ng-container>
+      </ng-container>
+    </nz-breadcrumb>
+    <nz-page-header-title>
+      <ng-container *ngIf="!wpxManual; else wpxTitle">
+        <ng-container *ngIf="(wpx.pages | async)! as pages">
+          <ng-container *ngIf="wpx.pageId">{{ pages[wpx.pageId]?.name }}</ng-container>
+        </ng-container>
+      </ng-container>
+      <ng-template #wpxTitle>{{ wpx.layout.title }}</ng-template>
+    </nz-page-header-title>
+    <nz-page-header-extra *ngIf="!!wpx.layout.actions">
+      <nz-space>
+        <ng-container *ngFor="let action of wpx.layout.actions">
+          <ng-container *nzSpaceItem>
+            <ng-container *ngTemplateOutlet="action"></ng-container>
+          </ng-container>
+        </ng-container>
+      </nz-space>
+    </nz-page-header-extra>
+  </nz-page-header>
+</ng-container>
