--- a/projects/settings/roles/roles.component.html
+++ b/projects/settings/roles/roles.component.html
@@ -1,4 +1,4 @@
-<wpx-layout title="权限管理">
+<wpx-layout wpxTitle="权限管理">
   <button *wpxLayoutAction nz-button nzType="primary" nzShape="circle" nz-tooltip="新增" (click)="form()">
     <i nz-icon nzType="plus"></i>
   </button>
