--- a/projects/common/src/lib/header/header.component.html
+++ b/projects/common/src/lib/header/header.component.html
@@ -12,8 +12,8 @@
               <li nz-menu-item [routerLink]="['/pages']">
                 <i nz-icon nzType="home"></i> <span class="name">我的应用</span>
               </li>
-              <li nz-menu-item [routerLink]="['/media']">
-                <i nz-icon nzType="inbox"></i> <span class="name">多媒体资源</span>
+              <li nz-menu-item [routerLink]="['/resources']">
+                <i nz-icon nzType="inbox"></i> <span class="name">服务资源</span>
               </li>
               <li nz-menu-item [routerLink]="['/settings']">
                 <i nz-icon nzType="tool"></i>
