--- a/projects/components/dynamic/table/table.component.html
+++ b/projects/components/dynamic/table/table.component.html
@@ -4,10 +4,10 @@
   </button>
 </wpx-layout>
 
-<nz-card *ngIf="!loading; else loadingCard" [nzTitle]="table.wpxSearchRef" [nzExtra]="table.wpxToolRef">
-  <wpx-table #table [wpxDataset]="ds" (wpxFetch)="getData($event)"></wpx-table>
-</nz-card>
+<!--<nz-card *ngIf="!loading; else loadingCard" [nzTitle]="table.wpxSearchRef" [nzExtra]="table.wpxToolRef">-->
+<!--  <wpx-table #table [wpxDataset]="ds" (wpxFetch)="getData($event)"></wpx-table>-->
+<!--</nz-card>-->
 
-<ng-template #loadingCard>
-  <nz-card [nzLoading]="true"></nz-card>
-</ng-template>
+<!--<ng-template #loadingCard>-->
+<!--  <nz-card [nzLoading]="true"></nz-card>-->
+<!--</ng-template>-->
