--- a/projects/settings/src/lib/roles/roles.component.html
+++ b/projects/settings/src/lib/roles/roles.component.html
@@ -4,6 +4,6 @@
   </button>
 </wpx-layout>
 
-<nz-card [nzTitle]="table.wpxSearchRef" [nzExtra]="table.wpxToolRef">
-  <wpx-table #table [wpxDataset]="ds" (wpxFetch)="getData($event)"></wpx-table>
-</nz-card>
+<!--<nz-card [nzTitle]="table.wpxSearchRef" [nzExtra]="table.wpxToolRef">-->
+<!--  <wpx-table #table [wpxDataset]="ds" (wpxFetch)="getData($event)"></wpx-table>-->
+<!--</nz-card>-->
