--- a/projects/settings/src/lib/roles/form/form.component.html
+++ b/projects/settings/src/lib/roles/form/form.component.html
@@ -14,9 +14,9 @@
   </nz-form-item>
 
   <nz-form-item>
-    <nz-form-label>权限代码</nz-form-label>
+    <nz-form-label nzRequired>权限标识</nz-form-label>
     <nz-form-control>
-      <input nz-input formControlName="key" placeholder="请填写权限代码" />
+      <input nz-input formControlName="key" placeholder="请填写权限标识" />
     </nz-form-control>
   </nz-form-item>
 
@@ -24,6 +24,33 @@
     <nz-form-label nzRequired>状态</nz-form-label>
     <nz-form-control>
       <nz-switch formControlName="status"></nz-switch>
+    </nz-form-control>
+  </nz-form-item>
+
+  <nz-form-item>
+    <nz-form-label>描述</nz-form-label>
+    <nz-form-control>
+      <textarea rows="4" nz-input formControlName="key"></textarea>
+    </nz-form-control>
+  </nz-form-item>
+
+  <nz-form-item>
+    <nz-form-label>标签</nz-form-label>
+    <nz-form-control formArrayName="labels">
+      <ng-container *ngFor="let x of labels?.controls; index as i; first as isFirst">
+        <nz-input-group [formGroupName]="i" nzCompact [ngStyle]="{ 'margin-top': isFirst ? null : '-1px' }">
+          <ng-container>
+            <input style="width: 45%" type="text" nz-input formControlName="label" placeholder="标签名称" />
+          </ng-container>
+          <input style="width: 45%" type="text" nz-input formControlName="value" placeholder="标签值" />
+          <button nz-button nzType="default" style="width: 10%" (click)="removeValues(i)">
+            <i nz-icon nzType="minus-circle"></i>
+          </button>
+        </nz-input-group>
+      </ng-container>
+      <button style="margin-top: 8px" type="button" nz-button nzType="dashed" nzBlock (click)="addValues()">
+        <i nz-icon nzType="plus-circle"></i> 新增标签
+      </button>
     </nz-form-control>
   </nz-form-item>
 </form>
